add work experience

--- a/index.html
+++ b/index.html
@@ -255,26 +255,38 @@
           class="block font-bold text-3xl bg-neutral-100 text-neutral-900 w-full p-5"
           >Work Experience</span
         >
-        <div class="flex justify-between my-10 mx-5">
-          <span class="font-bold text-xl">TOPPC (Computer shop)</span>
+        <div class="flex justify-between my-10 mx-5 sm:flex sm:justify-between">
+          <span class="font-bold text-xl">TOP PC (Computer shop)</span>
           <div class="flex flex-col justify-center text-right">
-            <span class="text-xl">Technician</span>
-            <span class="flex justify-center text-neutral-300 kanit-light">
-              <span class="material-symbols-outlined mx-1">
+            <span class="text-xl">Intern</span>
+            <span class="flex justify-center text-neutral-300 kanit-light"
+              ><span class="material-symbols-outlined mx-1">
                 calendar_month </span
-              >September, 2018 - October, 2018</span
+              >Sep, 2018 - Oct, 2018</span
             >
           </div>
         </div>
         <hr class="mx-5" />
-        <div class="flex justify-between my-10 mx-5">
+        <div class="flex justify-between my-10 mx-5 sm:flex sm:justify-between">
           <span class="font-bold text-xl">ADVICE (Computer shop)</span>
           <div class="flex flex-col justify-center text-right">
-            <span class="text-xl">Technician</span>
+            <span class="text-xl">Intern</span>
             <span class="flex justify-center text-neutral-300 kanit-light"
               ><span class="material-symbols-outlined mx-1">
                 calendar_month </span
               >May, 2020 - June, 2020</span
+            >
+          </div>
+        </div>
+        <hr class="mx-5" />
+        <div class="flex justify-between my-10 mx-5 sm:flex sm:justify-between">
+          <span class="font-bold text-xl">National Telecom (NT)</span>
+          <div class="flex flex-col justify-center text-right">
+            <span class="text-xl">Intern</span>
+            <span class="flex justify-center text-neutral-300 kanit-light"
+              ><span class="material-symbols-outlined mx-1">
+                calendar_month </span
+              >Oct, 2023 - Feb, 2024</span
             >
           </div>
         </div>
