--- a/index.html
+++ b/index.html
@@ -192,8 +192,13 @@
             <hr class="text-neutral-100 mx-1" />
             <table width="100%" class="w-full text-xl">
               <tr>
-                <th role="heading" width="35%" class="text-left">Phone:</th>
+                <th role="heading" width="35%" class="text-left">Name:</th>
                 <td class="text-left text-wrap py-3">Wittayalai Saitoonkaew</td>
+              </tr>
+
+              <tr>
+                <th role="heading" width="35%" class="text-left">Phone:</th>
+                <td class="text-left text-wrap py-3">(+66) 93-308-7886</td>
               </tr>
 
               <tr>
