add phone number hyperlink

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
               <tr>
                 <th role="heading" width="35%" class="text-left">Phone:</th>
-                <td class="text-left text-wrap py-3">(+66) 93-308-7886</td>
+                <td class="text-left text-wrap py-3"><a href="tel:+66933087886">(+66) 93-308-7886</a></td>
               </tr>
 
               <tr>
