--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             CV
           </button>
         </a>
-        <a href="assets/pdf/Portfolio.pdf" target="_blank" class="m-3">
+        <a href="assets/pdf/Certificate.pdf" target="_blank" class="m-3">
           <button
             type="button"
             class="bg-neutral-100 text-neutral-900 border-2 border-neutral-900 w-24 h-10 text-xl active:bg-neutral-100 active:text-neutral-900 hover:bg-neutral-900 hover:text-neutral-100 sm:w-52 sm:h-20 sm:text-3xl"
@@ -99,7 +99,7 @@
             data-aos-delay="1100"
             data-aos-easing="ease-out"
           >
-            Portfolio
+            Certificates
           </button>
         </a>
       </div>
@@ -237,11 +237,11 @@
             </p>
             <div class="flex justify-center">
               <a
-                href="assets/pdf/Portfolio.pdf"
+                href="assets/pdf/Certificate.pdf"
                 target="_blank"
                 class="bg-neutral-100 text-neutral-900 border-2 border-neutral-900 px-4 py-2 text-2xl my-8 hover:bg-neutral-900 hover:text-neutral-100 hover:border-neutral-100 active:bg-neutral-100 active:text-neutral-900"
               >
-                Portfolio
+                Certificates
               </a>
             </div>
           </div>
